// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostReadList should render with ltr bengali items with correct dir 1`] = `
.c1 {
  display: inline;
}

.c7 {
  color: #222222;
  font-size: 1.625rem;
  line-height: 1.875rem;
  font-family: "Shonar Bangla",Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
}

.c4 {
  font-family: "Shonar Bangla",Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #B80000;
  font-size: 2rem;
  line-height: 2.25rem;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: 3rem;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    width: calc(18/18*(100% - 18 * 0.5rem) + 17 * 0.5rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    width: calc(18/18*(100% - 18 * 0.5rem) + 17 * 0.5rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    width: calc(9/18*(100% - 18 * 0.5rem) + 8 * 0.5rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    width: calc(9/18*(100% - 18 * 1rem) + 8 * 1rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    width: calc(12/24*(100% - 24 * 1rem) + 11 * 1rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(12/60*(100% - 60 * 1rem) + 11 * 1rem );
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    width: calc(11.11111111111111%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    width: calc(11.11111111111111%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    width: calc(22.22222222222222%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    width: calc(22.22222222222222%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    width: calc(16.666666666666668%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: calc(16.666666666666668%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    width: calc(88.88888888888889%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    width: calc(88.88888888888889%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    width: calc(77.77777777777777%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c5 {
    width: calc(77.77777777777777%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c5 {
    width: calc(83.33333333333333%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c5 {
    width: calc(83.33333333333333%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c5 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 1.625rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@media (min-width:80rem) {
  .c6 {
    padding-top: 0.5rem;
    padding-left: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1"
    dir="ltr"
  >
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ১
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ২
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ৩
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ৪
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ৫
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ৬
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ৭
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ৮
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ৯
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ১০
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with ltr burmese items with correct dir 1`] = `
.c1 {
  display: inline;
}

.c7 {
  color: #222222;
  font-size: 1.25rem;
  line-height: 1.875rem;
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
}

.c4 {
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #B80000;
  font-size: 2rem;
  line-height: 2.25rem;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: 3rem;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    width: calc(18/18*(100% - 18 * 0.5rem) + 17 * 0.5rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    width: calc(18/18*(100% - 18 * 0.5rem) + 17 * 0.5rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    width: calc(9/18*(100% - 18 * 0.5rem) + 8 * 0.5rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    width: calc(9/18*(100% - 18 * 1rem) + 8 * 1rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    width: calc(12/24*(100% - 24 * 1rem) + 11 * 1rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(12/60*(100% - 60 * 1rem) + 11 * 1rem );
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    width: calc(11.11111111111111%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    width: calc(11.11111111111111%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    width: calc(22.22222222222222%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    width: calc(22.22222222222222%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    width: calc(16.666666666666668%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: calc(16.666666666666668%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    width: calc(88.88888888888889%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    width: calc(88.88888888888889%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    width: calc(77.77777777777777%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c5 {
    width: calc(77.77777777777777%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c5 {
    width: calc(83.33333333333333%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c5 {
    width: calc(83.33333333333333%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c5 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 1.25rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 1.625rem;
    line-height: 2.75rem;
  }
}

@media (min-width:80rem) {
  .c6 {
    padding-top: 0.5rem;
    padding-left: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 2.5rem;
    line-height: 4.125rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 3.5rem;
    line-height: 5.375rem;
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1"
    dir="ltr"
  >
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ၁
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ၂
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ၃
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ၄
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ၅
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ၆
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ၇
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ၈
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ၉
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          ၁၀
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with ltr news items with correct dir 1`] = `
.c1 {
  display: inline;
}

.c7 {
  color: #222222;
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
}

.c4 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-style: normal;
  color: #B80000;
  font-size: 2rem;
  line-height: 2.25rem;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: 3rem;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    width: calc(18/18*(100% - 18 * 0.5rem) + 17 * 0.5rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    width: calc(18/18*(100% - 18 * 0.5rem) + 17 * 0.5rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    width: calc(9/18*(100% - 18 * 0.5rem) + 8 * 0.5rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    width: calc(9/18*(100% - 18 * 1rem) + 8 * 1rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    width: calc(12/24*(100% - 24 * 1rem) + 11 * 1rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(12/60*(100% - 60 * 1rem) + 11 * 1rem );
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    width: calc(11.11111111111111%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    width: calc(11.11111111111111%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    width: calc(22.22222222222222%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    width: calc(22.22222222222222%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    width: calc(16.666666666666668%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: calc(16.666666666666668%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    width: calc(88.88888888888889%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    width: calc(88.88888888888889%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    width: calc(77.77777777777777%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c5 {
    width: calc(77.77777777777777%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c5 {
    width: calc(83.33333333333333%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c5 {
    width: calc(83.33333333333333%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c5 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:80rem) {
  .c6 {
    padding-top: 0.5rem;
    padding-left: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1"
    dir="ltr"
  >
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          1
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          2
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          3
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          4
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          5
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          6
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          7
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          8
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          9
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <span
          class="c4"
        >
          10
        </span>
      </div>
      <div
        class="c5"
        dir="ltr"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </div>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with rtl arabic items with correct dir 1`] = `
.c1 {
  display: inline;
}

.c7 {
  color: #222222;
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  padding-bottom: 1.5rem;
  padding-right: 1rem;
}

.c4 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #B80000;
  font-size: 2rem;
  line-height: 2.25rem;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: 3rem;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    width: calc(18/18*(100% - 18 * 0.5rem) + 17 * 0.5rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    width: calc(18/18*(100% - 18 * 0.5rem) + 17 * 0.5rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    width: calc(9/18*(100% - 18 * 0.5rem) + 8 * 0.5rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    width: calc(9/18*(100% - 18 * 1rem) + 8 * 1rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    width: calc(12/24*(100% - 24 * 1rem) + 11 * 1rem );
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(12/60*(100% - 60 * 1rem) + 11 * 1rem );
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    width: calc(11.11111111111111%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    width: calc(11.11111111111111%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    width: calc(22.22222222222222%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    width: calc(22.22222222222222%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    width: calc(16.666666666666668%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: calc(16.666666666666668%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    width: calc(88.88888888888889%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    width: calc(88.88888888888889%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    width: calc(77.77777777777777%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c5 {
    width: calc(77.77777777777777%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c5 {
    width: calc(83.33333333333333%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c5 {
    width: calc(83.33333333333333%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c5 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@media (min-width:80rem) {
  .c6 {
    padding-top: 0.5rem;
    padding-right: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1"
    dir="rtl"
  >
    <div
      as="li"
      class="c2"
      dir="rtl"
    >
      <div
        class="c3"
        dir="rtl"
      >
        <span
          class="c4"
        >
          ۱
        </span>
      </div>
      <div
        class="c5"
        dir="rtl"
      >
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="rtl"
    >
      <div
        class="c3"
        dir="rtl"
      >
        <span
          class="c4"
        >
          ۲
        </span>
      </div>
      <div
        class="c5"
        dir="rtl"
      >
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="rtl"
    >
      <div
        class="c3"
        dir="rtl"
      >
        <span
          class="c4"
        >
          ۳
        </span>
      </div>
      <div
        class="c5"
        dir="rtl"
      >
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="rtl"
    >
      <div
        class="c3"
        dir="rtl"
      >
        <span
          class="c4"
        >
          ۴
        </span>
      </div>
      <div
        class="c5"
        dir="rtl"
      >
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="rtl"
    >
      <div
        class="c3"
        dir="rtl"
      >
        <span
          class="c4"
        >
          ۵
        </span>
      </div>
      <div
        class="c5"
        dir="rtl"
      >
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="rtl"
    >
      <div
        class="c3"
        dir="rtl"
      >
        <span
          class="c4"
        >
          ۶
        </span>
      </div>
      <div
        class="c5"
        dir="rtl"
      >
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="rtl"
    >
      <div
        class="c3"
        dir="rtl"
      >
        <span
          class="c4"
        >
          ۷
        </span>
      </div>
      <div
        class="c5"
        dir="rtl"
      >
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="rtl"
    >
      <div
        class="c3"
        dir="rtl"
      >
        <span
          class="c4"
        >
          ۸
        </span>
      </div>
      <div
        class="c5"
        dir="rtl"
      >
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="rtl"
    >
      <div
        class="c3"
        dir="rtl"
      >
        <span
          class="c4"
        >
          ۹
        </span>
      </div>
      <div
        class="c5"
        dir="rtl"
      >
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </div>
    </div>
    <div
      as="li"
      class="c2"
      dir="rtl"
    >
      <div
        class="c3"
        dir="rtl"
      >
        <span
          class="c4"
        >
          ۱۰
        </span>
      </div>
      <div
        class="c5"
        dir="rtl"
      >
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </div>
    </div>
  </div>
</ol>
`;
